# ai-demos-and-examples

./: .gitignore  CLAUDE.md  README.md  how_tools_work.md
how_tools_work/: README.md  ai-patterns.code-workspace  main.py  models.py  prompt.md  pyproject.toml
how_tools_work/jumppad/: main.hcl  reset.sh
how_tools_work/test_fixtures/: openweather.json
how_tools_work/tools/: test_weather.py  weather.py
jumppad/: main.hcl
langchain-mcp/: README.md
langchain-mcp/.langgraph_api/: .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langchain-mcp/src/: agent.py
langchain_mcp/: ,gitignore  .gitignore  pyproject.toml
langchain_mcp/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl
langchain_mcp/src/: agent.py
