[project]
name = "langchain-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastmcp>=2.13.0.2",
    "langchain>=1.0.3",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
]
